[package]
name = "meg-apsu"
version = "1.2.1"
edition = "2021"
authors = ["sectio-aurea-q <meg.depth@proton.me>"]
description = "Quantum Drug Target Analyzer — Structure-based quantum vulnerability scoring for enzyme drug targets"
repository = "https://github.com/sectio-aurea-q/meg-apsu"
license = "MIT"
keywords = ["quantum", "biology", "drug-discovery", "enzyme", "tunneling"]
[[bin]]
name = "meg-apsu"
path = "src/main.rs"
[dependencies]
ndarray = "0.15"
num-complex = "0.4"
num-traits = "0.2"
rayon = "=1.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[profile.release]
opt-level = 3
lto = true
